--- a/readme
+++ b/readme
@@ -1,116 +1,66 @@
 # Sistema de Microservicios para una Joyería ("El Brillo")
 
-Este proyecto es una implementación de un sistema de comercio electrónico para una joyería ficticia llamada "El Brillo", desarrollado como parte del primer parcial de la materia "Integración de Aplicaciones y Computación en la Nube". La principal característica del proyecto es su **arquitectura de microservicios**, que desacopla las responsabilidades del negocio en servicios independientes y escalables.
+Este proyecto es una implementación de un sistema de comercio electrónico para una joyería ficticia llamada **"El Brillo"**, desarrollado como parte del primer parcial de la materia *Integración de Aplicaciones y Computación en la Nube*.  
+La principal característica del proyecto es su **arquitectura de microservicios**, que desacopla las responsabilidades del negocio en servicios independientes y escalables.
 
 ## Demostración Visual
 
-<table>
-  <tr>
-    <td align="center"><strong>Interfaz Principal</strong></td>
-    <td align="center"><strong>Factura Generada</strong></td>
-    <td align="center"><strong>Verificación en Base de Datos</strong></td>
-  </tr>
-  <tr>
-    <td><img src="https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Interfaz%20Principal%20de%20la%20Aplicaci%C3%B3n.png" alt="Interfaz principal de la joyería" width="100%"></td>
-    <td><img src="https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Resultado%20Final%20-%20Factura%20Generada.png" alt="Factura generada en la interfaz" width="100%"></td>
-    <td><img src="https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Verificaci%C3%B3n%20en%20la%20Base%20de%20Datos.png" alt="Consulta a la base de datos mostrando la última factura" width="100%"></td>
-  </tr>
-</table>
+| Interfaz Principal | Factura Generada | Verificación en Base de Datos |
+|--------------------|------------------|-------------------------------|
+| ![Interfaz principal de la joyería](https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Interfaz%20Principal%20de%20la%20Aplicaci%C3%B3n.png) | ![Factura generada en la interfaz](https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Resultado%20Final%20-%20Factura%20Generada.png) | ![Consulta a la base de datos mostrando la última factura](https://raw.githubusercontent.com/bryramirezp/Portafolio-UDEM/main/Integ_aplicaciones_computacion/Parcial_1/Verificaci%C3%B3n%20en%20la%20Base%20de%20Datos.png) |
 
 ## 🚀 Arquitectura
 
 El sistema se compone de cuatro componentes principales que se ejecutan de forma independiente:
 
--   **1. Servidor Web (Frontend):**
-    -   Es una **Single Page Application (SPA)** construida con HTML, CSS y JavaScript puro.
-    -   Se encarga de renderizar el catálogo de productos, gestionar el carrito de compras y orquestar las llamadas a los diferentes microservicios.
-    -   Detecta dinámicamente el *hostname* para construir las URLs de los microservicios, lo que facilita su configuración y despliegue.
+- **1. Servidor Web (Frontend):**
+  - Es una **Single Page Application (SPA)** construida con HTML, CSS y JavaScript puro.
+  - Renderiza el catálogo de productos, gestiona el carrito de compras y orquesta las llamadas a los diferentes microservicios.
+  - Detecta dinámicamente el *hostname* para construir las URLs de los microservicios, lo que facilita su configuración y despliegue.
 
--   **2. Microservicio de Productos:**
-    -   **Tecnología:** Python + Flask.
-    -   **Responsabilidad:** Gestionar y exponer el catálogo de productos de la joyería.
-    -   **Endpoint:** `GET /api/products`
-    -   **Formato de Respuesta:** `XML`.
+- **2. Microservicio de Productos:**
+  - **Tecnología:** Python + Flask.
+  - **Responsabilidad:** Gestionar y exponer el catálogo de productos de la joyería.
+  - **Endpoint:** `GET /api/products`
+  - **Formato de Respuesta:** `XML`.
 
--   **3. Microservicio de Pedidos:**
-    -   **Tecnología:** Python + Flask.
-    -   **Responsabilidad:** Procesar el carrito de compras, validar los datos, calcular totales y registrar el pedido en la base de datos.
-    -   **Endpoint:** `POST /api/pedidos`
-    -   **Formato de Entrada:** `JSON`.
+- **3. Microservicio de Pedidos:**
+  - **Tecnología:** Python + Flask.
+  - **Responsabilidad:** Procesar el carrito de compras, validar datos, calcular totales y registrar el pedido en la base de datos.
+  - **Endpoint:** `POST /api/pedidos`
+  - **Formato de Entrada:** `JSON`.
 
--   **4. Microservicio de Facturas:**
-    -   **Tecnología:** Python + Flask.
-    -   **Responsabilidad:** Generar una factura detallada a partir de un ID de pedido existente.
-    -   **Endpoint:** `POST /api/facturas`
-    -   **Formato de Respuesta:** `XML`. El frontend utiliza **XSLT** para transformar este XML en una vista HTML legible para el usuario.
+- **4. Microservicio de Facturas:**
+  - **Tecnología:** Python + Flask.
+  - **Responsabilidad:** Generar una factura detallada a partir de un ID de pedido existente.
+  - **Endpoint:** `POST /api/facturas`
+  - **Formato de Respuesta:** `XML`.  
+    El frontend utiliza **XSLT** para transformar este XML en una vista HTML legible para el usuario.
 
 ## 🛠️ Stack Tecnológico
 
--   **Frontend:** HTML5, CSS3, JavaScript (ES6+)
--   **Backend (Microservicios):** Python 3, Flask
--   **Base de Datos:** MariaDB
--   **Arquitectura:** Microservicios, API REST
--   **Formatos de Datos:** JSON, XML, XSLT
+- **Frontend:** HTML5, CSS3, JavaScript (ES6+)
+- **Backend (Microservicios):** Python 3, Flask
+- **Base de Datos:** MariaDB
+- **Arquitectura:** Microservicios, API REST
+- **Formatos de Datos:** JSON, XML, XSLT
 
 ## ✨ Características Principales
 
--   **Desacoplamiento de Servicios:** Cada lógica de negocio (productos, pedidos, facturas) opera de forma independiente, permitiendo un desarrollo y mantenimiento más sencillos.
--   **Comunicación Asíncrona:** El frontend utiliza peticiones asíncronas (`fetch`) para interactuar con los microservicios sin recargar la página.
--   **Manejo de Diferentes Formatos de Datos:** El sistema demuestra la capacidad de consumir y producir datos tanto en JSON como en XML, una habilidad clave en la integración de aplicaciones.
--   **Configuración Dinámica:** El frontend está diseñado para adaptarse fácilmente a diferentes entornos (local, producción) gracias a su detección automática de URLs.
--   **Persistencia de Datos:** Todos los pedidos y facturas se almacenan de forma segura en una base de datos MariaDB.
+- **Desacoplamiento de Servicios:** Cada lógica de negocio (productos, pedidos, facturas) opera de forma independiente, facilitando desarrollo y mantenimiento.
+- **Comunicación Asíncrona:** El frontend utiliza `fetch` para interactuar con los microservicios sin recargar la página.
+- **Manejo de Diferentes Formatos de Datos:** El sistema consume y produce tanto JSON como XML, clave en integración de aplicaciones.
+- **Configuración Dinámica:** El frontend se adapta fácilmente a distintos entornos (local, producción) detectando automáticamente las URLs.
+- **Persistencia de Datos:** Todos los pedidos y facturas se almacenan de forma segura en MariaDB.
 
 ## ⚙️ Instalación y Ejecución
 
-Para ejecutar este proyecto en un entorno local, sigue estos pasos:
-
 ### Prerrequisitos
--   Python 3.8 o superior
--   `pip` (manejador de paquetes de Python)
--   Un servidor de base de datos MariaDB o MySQL en ejecución.
+- Python 3.8 o superior
+- `pip` (manejador de paquetes de Python)
+- Servidor MariaDB o MySQL en ejecución
 
 ### 1. Clonar el Repositorio
 ```bash
 git clone https://github.com/tu-usuario/tu-repositorio.git
 cd tu-repositorio
-```
-
-### 2. Configurar la Base de Datos
--   Crea una base de datos en tu servidor MariaDB.
--   Importa el esquema de la base de datos (si tienes un archivo `.sql`) para crear las tablas `products`, `pedidos`, `detalles_pedidos` y `facturas`.
--   Asegúrate de configurar las credenciales de conexión en cada uno de los archivos de los microservicios (`products_service.py`, `pedidos_service.py`, `facturas_service.py`).
-
-### 3. Configurar y Ejecutar los Microservicios
-Para cada microservicio (productos, pedidos, facturas):
-
-```bash
-# Navega al directorio del servicio
-cd servicio-de-productos/
-
-# (Opcional pero recomendado) Crea y activa un entorno virtual
-python -m venv venv
-source venv/bin/activate  # En Windows: venv\Scripts\activate
-
-# Instala las dependencias
-pip install Flask Flask-MySQLdb
-
-# Ejecuta el servicio (cada uno en una terminal diferente)
-# Por defecto, Flask se ejecuta en el puerto 5000. Deberás ejecutarlos en puertos distintos.
-# Ejemplo:
-flask --app products_service.py run --port=5001
-flask --app pedidos_service.py run --port=5002
-flask --app facturas_service.py run --port=5003
-```
-
-### 4. Servir el Frontend
--   Abre el archivo `index.html` directamente en tu navegador web.
--   Utiliza el panel de configuración de URLs en la interfaz para apuntar a los puertos correctos donde se están ejecutando tus microservicios (ej. `http://127.0.0.1:5001`, `http://127.0.0.1:5002`, etc.).
-
-¡Y listo! Ahora puedes interactuar con la aplicación.
-
-## Autor
-
-*   **Bryan Ramirez**
-
----
-Este proyecto fue creado con fines académicos para demostrar la implementación de una arquitectura de software moderna y distribuida.
